# nutrient-pdf-mcp-server

./: .gitignore  .tool-versions  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  run-pdf-mcp.sh
pdf_mcp/: exceptions.py  parser.py  server.py  types.py
tests/: test_exceptions.py  test_integration.py  test_parser.py  test_server.py  test_types.py
