[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrient-pdf-mcp"
version = "1.0.0"
description = "Nutrient PDF MCP Server - Advanced PDF object tree investigation with lazy loading support"
authors = [{name = "Nutrient", email = "info@nutrient.io"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pdf", "mcp", "model-context-protocol", "document-analysis", "nutrient"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "mcp>=1.0.0",
    "pypdf>=4.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/PSPDFKit/nutrient-pdf-mcp-server"
Repository = "https://github.com/PSPDFKit/nutrient-pdf-mcp-server"
Issues = "https://github.com/PSPDFKit/nutrient-pdf-mcp-server/issues"
Documentation = "https://github.com/PSPDFKit/nutrient-pdf-mcp-server#readme"

[project.scripts]
nutrient-pdf-mcp = "pdf_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_mcp*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "pypdf.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pdf_mcp.parser"
ignore_errors = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "UP038", # isinstance with union types not supported at runtime
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]